--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <div class="row">
       <div id="ball"></div>
+      <div class="shadow" id="shadow"></div>
     </div>
+
     <script src="click.js"></script>
   </body>
 </html>
